--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!-- <div style="border:5px solid rgb(1, 39, 250)">-->
-    <title>Basic Html Tags </title>
+    <title> "THE GANSTER" </title>
     <meta name="description" content="this wab is made by s.ashhad" />
     <meta name="keywords" content="s.ashhad" />
     <meta name="canonical" herf="car.html"  />
@@ -49,6 +49,210 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Akaya+Telivigala&family=Open+Sans&family=Raleway&family=Roboto&family=Roboto+Slab&family=Rock+Salt&family=Stick&display=swap" rel="stylesheet">
 
+<style>
+
+h1 {
+  color: darkcyan;
+}
+h2 {
+  color: darkcyan;
+}
+h3 {
+  color: darkcyan;
+}
+h4 {
+  color: darkcyan;
+}
+h5 {
+  color: darkcyan;
+}
+h6 {
+  color: darkcyan;
+}
+div {
+  color: darkorchid;
+}
+
+input {
+  color: darkturquoise;
+}
+
+form {
+  color: darkturquoise;
+}
+
+#secound {
+  color: #009;
+}
+
+#thired {
+  color: rgb(255, 25, 25);
+}
+
+#firsthed {
+  background-color: crimson;
+  /* height: 50px;
+  width: 20px;*/
+}
+
+#border {
+  background-color: crimson;
+  /* height: 100px;
+  width: 70px; */
+  border: 6px green;
+  border-radius: 40px;
+}
+
+#first {
+  color: aquamarine;
+  background-color: rgb(231, 230, 241);
+  border: 3px solid purple;
+  padding: 50px;
+  margin: 50px;
+  border-radius: 23px;
+  box-sizing: border-box;
+  background-image: url(https://media.giphy.com/media/JVGLHEuzbVviw/giphy.gif);
+  color: white;
+}
+
+.container {
+  background-color: rgb(231, 230, 241);
+  border: 3px solid purple;
+  padding: 50px;
+  margin: 50px;
+  border-radius: 23px;
+  box-sizing: border-box;
+}
+
+/* css fonts */
+/* 
+body {
+  font-family: "Abril Fatface", cursive;
+  font-family: "Akaya Telivigala", cursive;
+} */
+/* body {
+  font-family: "Abril Fatface", cursive;
+  font-family: "Akaya Telivigala", cursive;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Slab", serif;
+  font-family: "Rock Salt", cursive;
+} */
+
+body {
+  font-family: "Abril Fatface", cursive;
+  font-family: "Akaya Telivigala", cursive;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Slab", serif;
+  font-family: "Rock Salt", cursive;
+  font-family: "Stick", sans-serif;
+}
+
+count1 {
+  background-color: rgb(231, 230, 241);
+  border: 3px solid purple;
+  padding: 50px;
+  margin: 50px;
+  border-radius: 23px;
+  box-sizing: border-box;
+}
+
+count1 {
+  border: 2px solid red;
+  background-color: rgb(223, 245, 201);
+  padding: 34px;
+  margin: 34px auto;
+  width: 666px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: rgb(5, 0, 0);
+  background-color: rgb(221, 166, 38);
+}
+a:visited {
+  background-color: yellow;
+}
+a:active {
+  background-color: darkblue;
+}
+.btn {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  background-color: crimson;
+  padding: 6px;
+  border: none;
+  cursor: pointer;
+  font-size: 13px;
+  border-radius: 4px;
+}
+.btn:hover {
+  color: darkgoldenrod;
+  background-color: rgb(223, 245, 201);
+  border: 2px solid black;
+}
+
+raza {
+  background-color: rgb(231, 230, 241);
+  border: 3px solid purple;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 23px;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: aqua;
+  background: rgb(173, 0, 0);
+}
+a:visited {
+  background: rgb(165, 92, 214);
+}
+a:active {
+  background: rgb(168, 204, 111);
+}
+
+.navbar {
+  background-color: black;
+  border-radius: 30px;
+}
+.navbar ul {
+  overflow: auto;
+}
+.navbar li {
+  float: left;
+  list-style: none;
+  margin: 13px 20px;
+}
+.navbar li a {
+  padding: 3px 3px;
+  text-decoration: none;
+  color: white;
+}
+.navbar li a:hover {
+  color: red;
+}
+.search {
+  float: right;
+  color: white;
+  padding: 12px 75px;
+}
+.navbar input {
+  border: 2px solid black;
+  border-radius: 14px;
+  padding: 3px 17px;
+  width: 129px;
+}
+
+
+</style>
 
 </head>
 
@@ -160,6 +364,11 @@
     <audio controls>
         <source src="https://www.computerhope.com/jargon/m/example.mp3" />
       </audio> </br></li>
+
+
+
+
+      
       <embed src="https://www.computerhope.com/clouds.mid" 
        align="baseline" border="0" width="145" 
        height="60" autostart="false" loop="true">
@@ -647,5 +856,5 @@ padding : trbl -->
 
 </ol>
 </ol>
-</body>
-</html>
+</body >
+</html
